--- a/public/css/base/_button.css
+++ b/public/css/base/_button.css
@@ -8,14 +8,6 @@ button {
     pointer-events: none;
   }
 
-  /* begin legacy */
-  &.mask-icon.active,
-  &.active > .mask-icon,
-  & > .mask-icon.active {
-    background-color: var(--color-on);
-  }
-  /* end legacy */
-
   &:hover {
     cursor: pointer;
   }
@@ -37,7 +29,7 @@ button {
     padding: 0.3em;
 
     &.active {
-      border-bottom: 1px solid var(--color-on);
+      border-bottom: 1px solid var(--color-accent-active);
     }
   }
 
@@ -59,6 +51,6 @@ button {
   }
 
   &.active {
-    color: var(--color-on);
+    color: var(--color-accent-active);
   }
 }
