--- a/public/css/base/_icons.css
+++ b/public/css/base/_icons.css
@@ -36,7 +36,7 @@
   }
 
   &.on {
-    background-color: var(--color-on);
+    background-color: var(--color-accent-active);
   }
 
   &.no {
@@ -651,7 +651,7 @@
 
   &.on::after {
     content: 'toggle_on';
-    color: var(--color-on);
+    color: var(--color-accent-active);
   }
 
   &.disabled {
