--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -12,6 +12,7 @@
   --color-info: #0b6f50;
   --color-blocked: #a21309;
   --color-changed: #ffffa7;
+  --dm-color-accent-active: #e18335;
   --color-off-black: #3f3f3f;
   --color-primary: #003d57;
   --color-primary-light: #939faa;
@@ -19,10 +20,8 @@
   --color-light-secondary: #f2f2f2;
   --color-light-tertiary: #fafafa;
   --color-mid: #e3e3e3;
-  --color-on: #d57120;
   --color-no: #a21309;
   --color-input-border: #ccc;
-  --dm-color-on: #e18335;
   --dm-color-medium: #555555;
   --dm-color-dark-faded: #333333;
   --dm-color-dark-neutral: #222222;
@@ -59,7 +58,7 @@
   background-color: var(--color-off-black);
 }
 .on-colour {
-  color: var(--color-on);
+  color: var(--color-accent-active);
 }
 .no-colour {
   color: var(--color-no);
@@ -73,7 +72,7 @@ html.dark-mode {
       color: var(--dm-color-light);
     }
     &.active {
-      color: var(--dm-color-on);
+      color: var(--dm-color-accent-active);
     }
     & > .primary-colour {
       color: var(--dm-color-light);
@@ -82,7 +81,7 @@ html.dark-mode {
   .primary-colour {
     color: var(--color-base-tertiary);
     &.active {
-      color: var(--color-on);
+      color: var(--color-accent-active);
     }
   }
   .lighter-background {
@@ -109,7 +108,7 @@ html.dark-mode {
     background-color: var(--dm-color-medium);
   }
   a {
-    color: var(--dm-color-on);
+    color: var(--dm-color-accent-active);
   }
   input[type=number],
   input[type=text],
@@ -150,7 +149,7 @@ html.dark-mode {
     }
   }
   .active > .material-symbols-outlined {
-    color: var(--dm-color-on);
+    color: var(--dm-color-accent-active);
   }
   .material-symbols-outlined {
     color: var(--dm-color-light-secondary);
@@ -161,14 +160,14 @@ html.dark-mode {
       color: var(--color-info);
     }
     &.active {
-      color: var(--dm-color-on);
+      color: var(--dm-color-accent-active);
     }
   }
   dialog {
     color: var(--dm-color-light);
     background-color: var(--dm-color-dark-faded);
     &.alert-confirm h4 {
-      background-color: var(--color-on);
+      background-color: var(--color-accent-active);
     }
   }
   .drawer {
@@ -185,7 +184,7 @@ html.dark-mode {
   .dropdown {
     box-shadow: 0px 0px 0px 0px;
     &.active .head {
-      background: var(--dm-color-on);
+      background: var(--dm-color-accent-active);
       & > .material-symbols-outlined:after {
         color: var(--color-off-black);
         background-color: transparent;
@@ -217,7 +216,7 @@ html.dark-mode {
   .key {
     button.layer-key {
       &.active {
-        background-color: var(--dm-color-on);
+        background-color: var(--dm-color-accent-active);
         color: var(--dm-color-medium);
       }
     }
@@ -249,7 +248,7 @@ html.dark-mode {
   }
   .location-view-grid {
     .layer-key > span {
-      background-color: var(--dm-color-on);
+      background-color: var(--dm-color-accent-active);
     }
     .location canvas {
       filter: invert(1);
@@ -267,9 +266,9 @@ html.dark-mode {
     border: solid 1px var(--dm-color-dark-faded);
     color: var(--color-base-tertiary);
     & button.primary-colour {
-      color: var(--color-on);
+      color: var(--color-accent-active);
       & > * {
-        color: var(--color-on);
+        color: var(--color-accent-active);
       }
     }
     &:after {
@@ -283,7 +282,7 @@ html.dark-mode {
     background: var(--dm-color-dark-medium);
   }
   ::-webkit-scrollbar-thumb {
-    background: var(--dm-color-on);
+    background: var(--dm-color-accent-active);
   }
   ::-webkit-scrollbar-corner {
     background: var(--dm-color-dark-faded);
@@ -296,7 +295,7 @@ html.dark-mode {
       .btn-row {
         background-color: var(--dm-color-dark-neutral);
         button {
-          color: var(--dm-color-on);
+          color: var(--dm-color-accent-active);
           background: var(--dm-color-dark-faded);
         }
       }
@@ -314,7 +313,7 @@ html.dark-mode {
         background-color: var(--dm-color-dark-neutral);
       }
       &.active .header {
-        background-color: var(--dm-color-on);
+        background-color: var(--dm-color-accent-active);
       }
     }
     .tabulator-footer {
@@ -322,7 +321,7 @@ html.dark-mode {
       .tabulator-page {
         color: var(--dm-color-light);
         &.active {
-          color: var(--dm-color-on);
+          color: var(--dm-color-accent-active);
         }
       }
     }
@@ -424,11 +423,6 @@ button {
   > .material-symbols-outlined {
     pointer-events: none;
   }
-  &.mask-icon.active,
-  &.active > .mask-icon,
-  & > .mask-icon.active {
-    background-color: var(--color-on);
-  }
   &:hover {
     cursor: pointer;
   }
@@ -446,7 +440,7 @@ button {
     border-bottom: 1px solid var(--color-light-secondary);
     padding: 0.3em;
     &.active {
-      border-bottom: 1px solid var(--color-on);
+      border-bottom: 1px solid var(--color-accent-active);
     }
   }
   &.underline {
@@ -464,7 +458,7 @@ button {
     }
   }
   &.active {
-    color: var(--color-on);
+    color: var(--color-accent-active);
   }
 }
 
@@ -546,7 +540,7 @@ a > img {
     -webkit-mask-position: left;
   }
   &.on {
-    background-color: var(--color-on);
+    background-color: var(--color-accent-active);
   }
   &.no {
     background-color: var(--color-no);
@@ -1098,7 +1092,7 @@ a > img {
   }
   &.on::after {
     content: "toggle_on";
-    color: var(--color-on);
+    color: var(--color-accent-active);
   }
   &.disabled {
     opacity: 0.5;
@@ -1313,11 +1307,11 @@ input[type=search]::-webkit-search-cancel-button:hover {
   text-align: center;
   color: var(--color-primary);
   &.active {
-    color: var(--color-on);
+    color: var(--color-accent-active);
   }
   &.on-colour,
   &.on {
-    color: var(--color-on);
+    color: var(--color-accent-active);
   }
   &.no-colour {
     color: var(--color-no);
@@ -1334,7 +1328,7 @@ input[type=search]::-webkit-search-cancel-button:hover {
   }
 }
 .active > .material-symbols-outlined {
-  color: var(--color-on);
+  color: var(--color-accent-active);
 }
 
 /* public/css/elements/_alert_confirm.css */
@@ -2156,7 +2150,7 @@ dialog {
     font-size: 0.8em;
     background-color: var(--color-mid);
     &.active {
-      background-color: var(--color-on);
+      background-color: var(--color-accent-active);
     }
   }
   & .textarea {
