--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -10,6 +10,7 @@
   --color-blocked: #a21309;
   --color-changed: #ffffa7;
   --dm-color-accent-active: #e18335;
+  --dm-color-blocked: #ef5350;
   --color-off-black: #3f3f3f;
   --color-primary: #003d57;
   --color-primary-light: #939faa;
@@ -17,7 +18,6 @@
   --color-light-secondary: #f2f2f2;
   --color-light-tertiary: #fafafa;
   --color-mid: #e3e3e3;
-  --color-no: #a21309;
   --color-input-border: #ccc;
   --dm-color-medium: #555555;
   --dm-color-dark-faded: #333333;
@@ -25,7 +25,6 @@
   --dm-color-light: #ffffff;
   --dm-color-light-secondary: #f2f2f2;
   --dm-color-light-darker: #d8d8d8;
-  --dm-color-no: #ef5350;
 }
 * {
   transition: 0.2s ease-in-out;
@@ -58,7 +57,7 @@
   color: var(--color-accent-active);
 }
 .no-colour {
-  color: var(--color-no);
+  color: var(--color-blocked);
 }
 
 /* public/css/layout/_ol.css */
