--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -13,6 +13,7 @@
   --color-blocked: #a21309;
   --color-changed: #ffffa7;
   --dm-color-accent-active: #e18335;
+  --dm-color-blocked: #ef5350;
   --color-off-black: #3f3f3f;
   --color-primary: #003d57;
   --color-primary-light: #939faa;
@@ -20,7 +21,6 @@
   --color-light-secondary: #f2f2f2;
   --color-light-tertiary: #fafafa;
   --color-mid: #e3e3e3;
-  --color-no: #a21309;
   --color-input-border: #ccc;
   --dm-color-medium: #555555;
   --dm-color-dark-faded: #333333;
@@ -28,7 +28,6 @@
   --dm-color-light: #ffffff;
   --dm-color-light-secondary: #f2f2f2;
   --dm-color-light-darker: #d8d8d8;
-  --dm-color-no: #ef5350;
 }
 * {
   transition: 0.2s ease-in-out;
@@ -61,7 +60,7 @@
   color: var(--color-accent-active);
 }
 .no-colour {
-  color: var(--color-no);
+  color: var(--color-blocked);
 }
 
 /* public/css/base/_dark_mode.css */
@@ -154,7 +153,7 @@ html.dark-mode {
   .material-symbols-outlined {
     color: var(--dm-color-light-secondary);
     &.no-colour {
-      color: var(--dm-color-no);
+      color: var(--dm-color-blocked);
     }
     &.ok-colour {
       color: var(--color-info);
@@ -543,7 +542,7 @@ a > img {
     background-color: var(--color-accent-active);
   }
   &.no {
-    background-color: var(--color-no);
+    background-color: var(--color-blocked);
   }
 }
 .add {
@@ -1235,7 +1234,7 @@ input {
 }
 input.invalid {
   opacity: 0.5;
-  outline: 1px solid var(--color-no);
+  outline: 1px solid var(--color-blocked);
 }
 input::placeholder {
   text-align: left;
@@ -1314,7 +1313,7 @@ input[type=search]::-webkit-search-cancel-button:hover {
     color: var(--color-accent-active);
   }
   &.no-colour {
-    color: var(--color-no);
+    color: var(--color-blocked);
   }
   &.ok-colour {
     color: var(--color-info);
@@ -2374,7 +2373,7 @@ dialog {
       right: 5%;
       width: 50px;
       height: 50px;
-      background-color: var(--color-no);
+      background-color: var(--color-blocked);
     }
   }
 }
