--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -26,7 +26,6 @@
   --color-mid: #e3e3e3;
   --color-input-border: #ccc;
   --dm-color-medium: #555555;
-  --dm-color-dark-faded: #333333;
   --dm-color-light: #ffffff;
   --dm-color-light-secondary: #f2f2f2;
   --dm-color-light-darker: #d8d8d8;
@@ -86,10 +85,10 @@ html.dark-mode {
     }
   }
   .lighter-background {
-    background-color: var(--dm-color-dark-faded);
+    background-color: var(--dm-color-base-secondary);
   }
   .bg-light-tertiary {
-    background-color: var(--dm-color-dark-faded);
+    background-color: var(--dm-color-base-secondary);
   }
   .input-range.single {
     &::after,
@@ -118,7 +117,7 @@ html.dark-mode {
   input[type=datetime-local] {
     background: var(--dm-color-medium);
     color: var(--dm-color-light);
-    border-color: var(--dm-color-dark-faded);
+    border-color: var(--dm-color-base-secondary);
   }
   input[type=search] {
     &::placeholder {
@@ -166,13 +165,13 @@ html.dark-mode {
   }
   dialog {
     color: var(--dm-color-light);
-    background-color: var(--dm-color-dark-faded);
+    background-color: var(--dm-color-base-secondary);
     &.alert-confirm h4 {
       background-color: var(--color-accent-active);
     }
   }
   .drawer {
-    background-color: var(--dm-color-dark-faded);
+    background-color: var(--dm-color-base-secondary);
     color: var(--color-light-secondary);
     border: none;
     &.top-btn {
@@ -193,24 +192,24 @@ html.dark-mode {
     }
     ul {
       &.label {
-        background-color: var(--dm-color-dark-faded);
+        background-color: var(--dm-color-base-secondary);
       }
     }
     ul > li,
     .head {
       background: var(--dm-color-medium);
       color: var(--dm-color-light);
-      border-color: var(--dm-color-dark-faded);
+      border-color: var(--dm-color-base-secondary);
       > .material-symbols-outlined:after {
         color: var(--color-base-tertiary);
       }
     }
     ul > li {
       &:hover {
-        background: var(--dm-color-dark-faded);
+        background: var(--dm-color-base-secondary);
       }
       &.selected {
-        background-color: var(--dm-color-dark-faded);
+        background-color: var(--dm-color-base-secondary);
       }
     }
   }
@@ -233,15 +232,15 @@ html.dark-mode {
   }
   #ctrls-divider,
   #tabview-divider {
-    background-color: var(--dm-color-dark-faded);
+    background-color: var(--dm-color-base-secondary);
   }
   #layers {
     & > .drawer.layer-group .drawer.layer-view {
-      background-color: var(--dm-color-dark-faded);
+      background-color: var(--dm-color-base-secondary);
       border-top: 1px solid var(--dm-color-medium);
     }
     & > .layer-view > .drawer {
-      background-color: var(--dm-color-dark-faded);
+      background-color: var(--dm-color-base-secondary);
     }
     .drawer.layer-view .drawer {
       background-color: var(--dm-color-base-primary);
@@ -264,7 +263,7 @@ html.dark-mode {
   .popup {
     background-color: var(--dm-color-medium);
     box-shadow: unset;
-    border: solid 1px var(--dm-color-dark-faded);
+    border: solid 1px var(--dm-color-base-secondary);
     color: var(--color-base-tertiary);
     & button.primary-colour {
       color: var(--color-accent-active);
@@ -276,7 +275,7 @@ html.dark-mode {
       border-top-color: var(--dm-color-medium);
     }
     & li:hover {
-      background: var(--dm-color-dark-faded);
+      background: var(--dm-color-base-secondary);
     }
   }
   ::-webkit-scrollbar-track {
@@ -286,7 +285,7 @@ html.dark-mode {
     background: var(--dm-color-accent-active);
   }
   ::-webkit-scrollbar-corner {
-    background: var(--dm-color-dark-faded);
+    background: var(--dm-color-base-secondary);
   }
   .tabview,
   .location,
@@ -297,11 +296,11 @@ html.dark-mode {
         background-color: var(--dm-color-base-primary);
         button {
           color: var(--dm-color-accent-active);
-          background: var(--dm-color-dark-faded);
+          background: var(--dm-color-base-secondary);
         }
       }
       & > .flex-col {
-        background-color: var(--dm-color-dark-faded);
+        background-color: var(--dm-color-base-secondary);
       }
     }
     .tabs,
@@ -330,7 +329,7 @@ html.dark-mode {
       background: var(--dm-color-base-primary);
     }
     .tabulator-col {
-      background-color: var(--dm-color-dark-faded);
+      background-color: var(--dm-color-base-secondary);
       color: var(--dm-color-light);
     }
     .tabulator-row {
