--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -26,7 +26,6 @@
   --color-light-tertiary: #fafafa;
   --color-mid: #e3e3e3;
   --color-input-border: #ccc;
-  --dm-color-light: #ffffff;
   --dm-color-light-secondary: #f2f2f2;
   --dm-color-light-darker: #d8d8d8;
 }
@@ -67,15 +66,15 @@
 /* public/css/base/_dark_mode.css */
 html.dark-mode {
   button {
-    color: var(--dm-color-light);
+    color: var(--dm-color-accent-primary);
     &.primary-colour {
-      color: var(--dm-color-light);
+      color: var(--dm-color-accent-primary);
     }
     &.active {
       color: var(--dm-color-accent-active);
     }
     & > .primary-colour {
-      color: var(--dm-color-light);
+      color: var(--dm-color-accent-primary);
     }
   }
   .primary-colour {
@@ -116,7 +115,7 @@ html.dark-mode {
   input[type=date],
   input[type=datetime-local] {
     background: var(--dm-color-base-tertiary);
-    color: var(--dm-color-light);
+    color: var(--dm-color-accent-primary);
     border-color: var(--dm-color-base-secondary);
   }
   input[type=search] {
@@ -130,7 +129,7 @@ html.dark-mode {
   }
   textarea {
     background-color: var(--dm-color-base-tertiary);
-    color: var(--dm-color-light);
+    color: var(--dm-color-accent-primary);
   }
   .val-changed {
     .dropdown > .head,
@@ -164,7 +163,7 @@ html.dark-mode {
     }
   }
   dialog {
-    color: var(--dm-color-light);
+    color: var(--dm-color-accent-primary);
     background-color: var(--dm-color-base-secondary);
     &.alert-confirm h4 {
       background-color: var(--color-accent-active);
@@ -198,7 +197,7 @@ html.dark-mode {
     ul > li,
     .head {
       background: var(--dm-color-base-tertiary);
-      color: var(--dm-color-light);
+      color: var(--dm-color-accent-primary);
       border-color: var(--dm-color-base-secondary);
       > .material-symbols-outlined:after {
         color: var(--color-base-tertiary);
@@ -309,7 +308,7 @@ html.dark-mode {
     }
     .tab {
       .header {
-        color: var(--dm-color-light);
+        color: var(--dm-color-accent-primary);
         background-color: var(--dm-color-base-primary);
       }
       &.active .header {
@@ -319,7 +318,7 @@ html.dark-mode {
     .tabulator-footer {
       background-color: var(--dm-color-base-primary);
       .tabulator-page {
-        color: var(--dm-color-light);
+        color: var(--dm-color-accent-primary);
         &.active {
           color: var(--dm-color-accent-active);
         }
@@ -330,10 +329,10 @@ html.dark-mode {
     }
     .tabulator-col {
       background-color: var(--dm-color-base-secondary);
-      color: var(--dm-color-light);
+      color: var(--dm-color-accent-primary);
     }
     .tabulator-row {
-      color: var(--dm-color-light);
+      color: var(--dm-color-accent-primary);
       &.tabulator-row-odd {
         background-color: var(--dm-color-base-primary);
       }
