--- a/public/css/base/_colours.css
+++ b/public/css/base/_colours.css
@@ -2,7 +2,7 @@
   /* begin unified colour palette */
 
   /* Backgrounds */
-  --color-base-primary: #f2f2f2;
+  --color-base: #f2f2f2;
   --color-base-secondary: #f2f2f2;
   --color-base-tertiary: #ffffff;
 
@@ -11,7 +11,7 @@
   --color-base-text-secondary: #939faa;
 
   /* Accent */
-  --color-accent-primary:  #003d57;
+  --color-accent:  #003d57;
   --color-accent-active: #d57120;
 
   /* Information */
@@ -22,7 +22,7 @@
   /* begin temporary dark mode */
 
   /* Backgrounds */
-  --dm-color-base-primary: #222222;
+  --dm-color-base: #222222;
   --dm-color-base-secondary: #333333;
   --dm-color-base-tertiary:  #555555;
 
@@ -31,9 +31,8 @@
   --dm-color-base-text-secondary: #d8d8d8;
 
   /* Accent */
+  --dm-color-accent:  #ffffff;
   --dm-color-accent-active:  #e18335;
-  --dm-color-accent-primary:  #ffffff;
-
 
   /* Information */
 
