--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -1,22 +1,22 @@
 /* public/css/base/_colours.css */
 :root {
-  --color-base-primary: #f2f2f2;
+  --color-base: #f2f2f2;
   --color-base-secondary: #f2f2f2;
   --color-base-tertiary: #ffffff;
   --color-base-text: #3f3f3f;
   --color-base-text-secondary: #939faa;
-  --color-accent-primary: #003d57;
+  --color-accent: #003d57;
   --color-accent-active: #d57120;
   --color-info: #0b6f50;
   --color-blocked: #a21309;
   --color-changed: #ffffa7;
-  --dm-color-base-primary: #222222;
+  --dm-color-base: #222222;
   --dm-color-base-secondary: #333333;
   --dm-color-base-tertiary: #555555;
   --dm-color-base-text: #f2f2f2;
   --dm-color-base-text-secondary: #d8d8d8;
+  --dm-color-accent: #ffffff;
   --dm-color-accent-active: #e18335;
-  --dm-color-accent-primary: #ffffff;
   --dm-color-blocked: #ef5350;
   --color-off-black: #3f3f3f;
   --color-primary: #003d57;
