--- a/public/css/base/_colours.css
+++ b/public/css/base/_colours.css
@@ -7,12 +7,13 @@
   --color-base-tertiary: #ffffff;
 
   /* Text */
-  --color-base-text: #3f3f3f;
-  --color-base-text-secondary: #939faa;
+  --color-text: #3f3f3f;
+  --color-text-secondary: #939faa;
 
   /* Accent */
   --color-accent:  #003d57;
   --color-accent-active: #d57120;
+
 
   /* Information */
   --color-info: #0b6f50;
@@ -27,15 +28,14 @@
   --dm-color-base-tertiary:  #555555;
 
     /* Text */
-  --dm-color-base-text: #f2f2f2;
-  --dm-color-base-text-secondary: #d8d8d8;
+  --dm-color-text: #f2f2f2;
+  --dm-color-text-secondary: #d8d8d8;
 
   /* Accent */
   --dm-color-accent:  #ffffff;
   --dm-color-accent-active:  #e18335;
 
   /* Information */
-
   --dm-color-blocked: #ef5350;
 
   /* end temporary dark mode */
@@ -44,7 +44,7 @@
 
 
   /* light colour mode */
-  --color-off-black: #3f3f3f; /* color-base-text */
+  --color-off-black: #3f3f3f; /* color-text */
 
   --color-primary: #003d57; /* color-accent-primary */
 
@@ -55,10 +55,6 @@
   --color-light-secondary: #f2f2f2;
 
   --color-light-tertiary: #fafafa;
-
-  --color-mid: #e3e3e3;
-
-  /* --color-changed: #ffffa7; color-changed */
 
   --color-input-border: #ccc;
 
