--- a/public/css/layout/_locationview.css
+++ b/public/css/layout/_locationview.css
@@ -56,7 +56,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 5px 10px;
-    border-bottom: 1px solid var(--color-mid);
+    border-bottom: 1px solid var(--color-base-secondary);
     padding: 0;
 
     & > .header {
@@ -79,7 +79,7 @@
     border-radius: 2px;
     font-weight: bold;
     font-size: 0.8em;
-    background-color: var(--color-mid);
+    background-color: var(--color-base-secondary);
 
     &.active {
       background-color: var(--color-accent-active);
