--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -6,8 +6,8 @@
   --color-base: #f2f2f2;
   --color-base-secondary: #f2f2f2;
   --color-base-tertiary: #ffffff;
-  --color-base-text: #3f3f3f;
-  --color-base-text-secondary: #939faa;
+  --color-text: #3f3f3f;
+  --color-text-secondary: #939faa;
   --color-accent: #003d57;
   --color-accent-active: #d57120;
   --color-info: #0b6f50;
@@ -16,8 +16,8 @@
   --dm-color-base: #222222;
   --dm-color-base-secondary: #333333;
   --dm-color-base-tertiary: #555555;
-  --dm-color-base-text: #f2f2f2;
-  --dm-color-base-text-secondary: #d8d8d8;
+  --dm-color-text: #f2f2f2;
+  --dm-color-text-secondary: #d8d8d8;
   --dm-color-accent: #ffffff;
   --dm-color-accent-active: #e18335;
   --dm-color-blocked: #ef5350;
@@ -27,7 +27,6 @@
   --color-off-light: #eeeeee;
   --color-light-secondary: #f2f2f2;
   --color-light-tertiary: #fafafa;
-  --color-mid: #e3e3e3;
   --color-input-border: #ccc;
 }
 * {
@@ -121,11 +120,11 @@ html.dark-mode {
   }
   input[type=search] {
     &::placeholder {
-      color: var(--dm-color-base-text-secondary);
+      color: var(--dm-color-text-secondary);
       opacity: 1;
     }
     &::-ms-input-placeholder {
-      color: var(--dm-color-base-text-secondary);
+      color: var(--dm-color-text-secondary);
     }
   }
   textarea {
@@ -1648,7 +1647,7 @@ dialog {
   overflow: visible;
   position: relative;
   background-color: var(--color-base-tertiary);
-  box-shadow: var(--color-mid) 0px 8px 24px;
+  box-shadow: var(--color-base-secondary) 0px 8px 24px;
   &:disabled {
     pointer-events: none;
     opacity: 0.4;
@@ -1765,7 +1764,7 @@ dialog {
   overflow: visible;
   position: relative;
   background-color: var(--color-base-tertiary);
-  box-shadow: var(--color-mid) 0px 8px 24px;
+  box-shadow: var(--color-base-secondary) 0px 8px 24px;
   & > ul {
     display: none;
     max-height: 500px;
@@ -2128,7 +2127,7 @@ dialog {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 5px 10px;
-    border-bottom: 1px solid var(--color-mid);
+    border-bottom: 1px solid var(--color-base-secondary);
     padding: 0;
     & > .header {
       grid-column: 1 / 3;
@@ -2148,7 +2147,7 @@ dialog {
     border-radius: 2px;
     font-weight: bold;
     font-size: 0.8em;
-    background-color: var(--color-mid);
+    background-color: var(--color-base-secondary);
     &.active {
       background-color: var(--color-accent-active);
     }
