--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -27,7 +27,6 @@
   --color-off-light: #eeeeee;
   --color-light-secondary: #f2f2f2;
   --color-light-tertiary: #fafafa;
-  --color-input-border: #ccc;
 }
 * {
   transition: 0.2s ease-in-out;
@@ -1267,7 +1266,7 @@ input[type=search],
 input[type=date],
 input[type=time],
 input[type=datetime-local] {
-  border: 1px solid var(--color-input-border);
+  border: 1px solid var(--color-base-secondary);
   padding: 5px;
   &:focus {
     cursor: text;
